--- a/Sprint_1/lesson_2/index.html
+++ b/Sprint_1/lesson_2/index.html
@@ -7,7 +7,8 @@
   </head>
   <body>
     <h1>Это JS</h1>
-    <!-- <script src="./lesson_1_new.js"></script> -->
-    <script src="./exam_01.js"></script>
+    <script src="./lesson_2_new.js"></script>
+    <script src="./lesson_2.js"></script>
+    <!-- <script src="./exam_01.js"></script> -->
   </body>
 </html>
